--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "axios": "^0.24.0",
     "connected-react-router": "^6.9.2",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-markdown": "^1.4.0",
     "js-cookie": "^2.2.1",
     "material-ui-chip-input": "1.0.0",
+    "moment": "^2.29.1",
     "mui-rte": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
