--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-markdown": "^1.4.0",
     "js-cookie": "^2.2.1",
-    "material-ui-chip-input": "1.0.0",
+    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.1",
     "mui-rte": "^2.0.1",
+    "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
